--- a/build.gradle
+++ b/build.gradle
@@ -83,7 +83,7 @@ jar {
 }
 
 def reobfFile = file("$buildDir/reobfJar/output.jar")
-def reobfArtifact = artifacts.add('default', reobfFile) { type 'jar'; builtBy 'reobfJar'; }
+def reobfArtifact = artifacts.add('default', reobfFile) { type 'jar'; builtBy 'reobfJar' }
 
 publishing {
   publications { mavenJava(MavenPublication) { artifact reobfArtifact } }
